# gtk-show-hide

./: .buildconfig  meson.build
builddir/meson-logs/: meson-log.txt
data/: martins.new.project.appdata.xml.in  martins.new.project.desktop.in  martins.new.project.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  newproject-application.c  newproject-window.blp  newproject-window.c  newproject.gresource.xml  style.css
src/include/: newproject-application.h  newproject-window.h
subprojects/blueprint-compiler/: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  MAINTENANCE.md  NEWS.md  blueprint-compiler.py  meson.build
subprojects/blueprint-compiler/blueprintcompiler/: errors.py  lsp.py  parse_tree.py
subprojects/blueprint-compiler/build-aux/: Dockerfile
subprojects/blueprint-compiler/docs/: conf.py  examples.rst  flatpak.rst  index.rst  meson.build  packaging.rst  translations.rst
subprojects/blueprint-compiler/docs/_static/: styles.css
subprojects/blueprint-compiler/tests/: fuzz.py  meson.build  test_samples.py  test_tokenizer.py
subprojects/blueprint-compiler/tests/sample_errors/: abstract_class.blp  action_widget_have_no_id.err  action_widget_in_invalid_container.err  action_widget_negative_response.err  action_widget_not_action.blp  action_widget_not_action.err  class_dne.blp  class_dne.err  no_import_version.err  not_a_class.blp  not_a_class.err  ns_not_imported.blp  ns_not_imported.err  obj_class_dne.blp  obj_in_string_list.err  obj_prop_type.err  property_dne.err  read_only_properties.err  (+5 more)
(+53 files in other folders)
